# errortype

./: .gitignore  .golangci.yaml  BUILD.bazel  MODULE.bazel  README.md  applyfixes.go  flags.go  go.mod  go.sum  main.go
.github/workflows/: test.yml
internal/analyze/: BUILD.bazel  analyzer.go  analyzer_test.go  doc.go  errorusage.go  handle_assert.go  handle_errorsas.go  handle_return.go  handle_switch.go  internal.go  iter.go  options.go  pass.go  process.go  reporter.go  result.go  run.go  usage.go
internal/analyze/report/: BUILD.bazel  assert.go  errorsas.go  generic.go  report.go  return.go  style.go  switch.go
internal/analyze/testdata/: go.mod  go.sum
internal/analyze/testdata/a/: alias.go  cockroach.go  errors.go  errorsas.go  func.go  generic.go  goerrors.go  juju.go  linkname.go  net.go  overrides.go  reflect.go  return.go  testify.go  typeassert.go
internal/analyze/testdata/a/b/: b.go
internal/analyze/testdata/a/c/: c.go
internal/analyze/testdata/alias/: alias.go
internal/analyze/testdata/main/: exceptions.go  main.go
internal/analyze/testdata/style/: style.go
internal/detect/: BUILD.bazel  aliases.go  analyzer.go  analyzer_test.go  assign.go  debug.go  doc.go  errorproperty.go  errorproperty_test.go  iter.go  options.go  optionsfunc.go  overrides.go  pass.go  receivers.go  result.go  run.go  typedecls.go  usage.go  vardecls.go
internal/detect/testdata/: overrides.yaml
internal/detect/testdata/a/: a.go  b.go  d.go  r.go
internal/detect/testdata/a/c/: c.go  r.go
internal/errortypes/: BUILD.bazel  doc.go  errortypes.go  propertymap.go
internal/overrides/: BUILD.bazel  doc.go  file.go  read.go  write.go
internal/typeutil/: BUILD.bazel  doc.go  erroraslist.go  funcname.go  funcname_test.go  funcof.go  funcof_test.go  hasgo.go  helpers_test.go  typename.go  typename_test.go  typeutil.go  typeutil_test.go
